convert libs to umd modules. add playback rate html

--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@
     <input type="radio" name="chooseone" value="one" id="one" checked><label for="one"> Stream 1 (Normal)</label>
     <input type="radio" name="chooseone" value="two" id="two"><label for="two"> Stream 2 (Quiet)</label>
   </p>
+  <div class="slidecontainer">
+    <input type="range" min="1" max="150" value="100" class="slider" id="myRange">
+    <p>Rate: <span id="demo"></span></p>
+  </div>
+  <p class="toggle">
+    <input type="radio" name="chooseone1" value="two" id="speed4"><label for="two"> 0.5</label>
+    <input type="radio" name="chooseone1" value="two" id="speed3"><label for="two"> 0.7</label>
+    <input type="radio" name="chooseone1" value="two" id="speed2"><label for="two"> 0.8</label>
+    <input type="radio" name="chooseone1" value="one" id="speed1" checked><label for="one"> 1.0</label>
+    
+  </p>
 
   <div class="logs" width=800 height=300></div>
 
