--- a/index.html
+++ b/index.html
@@ -135,11 +135,12 @@
 
   <div class="logs" width=800 height=300></div>
 
-  <script src="lib/db.js"></script>
+  <!-- <script src="lib/db.js"></script>
   <script src="lib/audiostore.js"></script>
   <script src="lib/streamer.js"></script>
   <script src="lib/player.js"></script>
-  <script src="lib/streamcoordinator.js"></script>
+  <script src="lib/streamcoordinator.js"></script> -->
+  <script src="build/Audiostore.js" ></script>
   <script src="index.js"></script>
 </body>
 </html>
